# task2_OX_game_osvn

./: CMakeLists.txt  README.md  defines.h  human_player.cpp  human_player.h  main.cpp  pc_dumb_player.cpp  pc_dumb_player.h  pc_smart_player.cpp  pc_smart_player.h  pc_trivial_player.cpp  pc_trivial_player.h  play_area.cpp  play_area.h  player_base.cpp  player_base.h  player_factory.h
libs/include/ncursesw/: ncurses.h  term.h
